--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,10 @@
 TODO:
 	Espaços de Magia de Bruxo
 	Rolagem automática em magias
-	Inspiração
+	Calemdario/Mapa mundial
 	Colocar propriedades
-	Sincronizar contadores com barrinhas
 	Configurações da mesa
-	Adaptar a tamanhos de tela menores
+	Adaptar a tamanhos de tela e centralização
 Em progresso:
-	Polymorph
-Feitas:
-	Desvantagem
-	Dados de Vida no descanso curto
-	Death Saving Throw
-	Propriedades das magias interpretadas corretamente
+	Calemdario; cretidos; contatodes e layout
+Essa ficha tem base em outras fichas, elas seram cretitadas quando for lançada a versão pós beta
